# meta-bfield

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  bfield.cpp  bfield.hpp  bfield_builder.cpp  bfield_builder.hpp  c_generator.cpp  c_generator.hpp  demo_prelude.c  demo_t32.c  meta_bfield.cpp  spec.cpp  spec.hpp  test_t32.c  testmain.c
demos/: CMakeLists.txt  demo_prelude.c  demo_t32.c
example_specs/: example.json  t32.json
preludes/: CMakeLists.txt  prelude.c  preludes.cpp.in  preludes.hpp
src/: bexport.cpp  bexport.hpp  bexpr.cpp  bexpr.hpp  bfield.cpp  bfield.hpp  bfield_builder.cpp  bfield_builder.hpp  bpart.cpp  bpart.hpp  bpart_reserved.cpp  bpart_reserved.hpp  bpart_variable.cpp  bpart_variable.hpp  c_generator.cpp  c_generator.hpp  ibpart.cpp  ibpart.hpp  meta_bfield.cpp  spec.cpp  spec.hpp  util.cpp  util.hpp
tests/: CMakeLists.txt  test_bfield.cpp  test_c_example.cpp  test_c_prelude.cpp  test_c_t32_encoding.cpp
